# ACME

./: .gitignore  .gitmodules  CMakeLists.txt  readme
DataRestructuring/: ACME DataRestructuring.pptx
DataRestructuring/Doxygen/: Doxyfile
DataRestructuring/LinearModel/: AcmePredictorsClean.ipynb  AcmePredictorsClean.r
DataRestructuring/Tools/: vdiff.sh
DataRestructuring/Tools/replaceTool/: README.md  replace.sh  summary.sh
DataRestructuring/Tools/replaceTool/old/: completeBackup.sh  prevbackup.sh  testdiff.sh  testdiff.sh~  vdiff2.sh  vdiffBackup2.sh  vdiffBackup3.sh  vdiffThurs.sh  vdiffold.sh
acme-scripts/: acme_util.py  create_test
cime.old/machines-acme/: config_machines.xml  env_mach_specific.melvin
cime/cime_config/acme/: config_files.xml  config_grids.xml
cime/cime_config/acme/allactive/: config_pes.xml  config_pesall.xml
cime/cime_config/acme/machines/: Makefile  config_batch.xml  config_build.xml  config_compilers.xml  config_machines.xml  config_pio.xml  syslog.cori-knl
cime/cime_config/xml_schemas/: config_build.xsd
cime/driver_cpl/bld/: build-namelist
cime/driver_cpl/bld/namelist_files/: namelist_defaults_drv.xml  namelist_definition_drv.xml
cime/driver_cpl/cime_config/: config_component.xml
cime/driver_cpl/driver/: CMakeLists.txt  prep_lnd_mod.F90  prep_rof_mod.F90
cime/driver_cpl/shr/: CMakeLists.txt  seq_drydep_mod.F90  seq_flds_mod.F90
cime/machines/: template.cesmrun
cime/machines-acme/: Depends.titan.pgi_acc  Makefile  cesm_postrun.perf_archive  cesm_prerun  cesm_prerun.perf_archive  config_batch.xml  config_compilers.xml  config_machines.xml  config_pes.xml  env_mach_specific.anlworkstation  env_mach_specific.blues  env_mach_specific.cades  env_mach_specific.carl  env_mach_specific.cori-knl  env_mach_specific.corip1  env_mach_specific.edison  env_mach_specific.eos  env_mach_specific.gerty  env_mach_specific.gerty-haswell  env_mach_specific.gerty-knl  env_mach_specific.melvin  env_mach_specific.penn  env_mach_specific.sierra  env_mach_specific.theta  env_mach_specific.titan  env_mach_specific.wolf  template.cesmrun
cime/scripts/: create_newcase
cime/scripts-acme/: acme_util.py  update_acme_tests.py
cime/scripts-acme/cmake/: do-cmake
cime/scripts-acme/pointclm/: adjust_restart.py  ensemble_copy.py  makepointdata.py  netcdf_functions.py  plotcase.py  pointCLM.py  post_process.py  site_fullrun.py
cime/scripts/Testing/Testlistxml/: testlist_allactive.xml
cime/scripts/Tools/: case.build  cesm_setup  cesm_submit  config_compsets.xml  config_compsets.xml_ebcdd233+mg2  config_compsets.xml_ebcdd233+mg2+aquap  config_definition.xml  config_grid.xml  preview_namelists
cime/scripts/Tools/diff/: addFiles  ddiff.sh  delFiles
cime/share/csm_share/shr/: CMakeLists.txt  shr_mem_mod.F90  shr_orb_mod.F90
cime/share/esmf_wrf_timemgr/: CMakeLists.txt
cime/share/timing/: CMakeLists.txt  GPTLget_memusage.c
cime/utils/perl5lib/: compilers_translation_tool.pl
cime/utils/perl5lib/Batch/: BatchMaker.pm  BatchUtils.pm
cime/utils/python/: update_acme_tests.py
cime/utils/python/CIME/: build.py  buildlib.py  case_test.py  provenance.py
components/: command.his.02022017
components/cam/bld/: Makefile.in  build-namelist  configure
components/cam/bld/config_files/: definition.xml
components/cam/bld/namelist_files/: namelist_defaults_cam.xml  namelist_definition.xml
components/cam/cime_config/: buildnml  config_component.xml  config_compsets.xml
components/cam/src/: CMakeLists.txt
components/cam/src/control/: cam_initfiles.F90  camsrfexch.F90  physconst.F90  runtime_opts.F90  scamMod.F90
components/cam/src/cpl/: atm_comp_mct.F90  atm_import_export.F90  cam_cpl_indices.F90
components/cam/src/utils/: cam_pio_utils.F90  spmd_utils.F90
components/cice/bld/: build-namelist
components/cice/src/source/: ice_itd.F90  ice_spacecurve.F90
components/clm/bld/: CLMBuildNamelist.pm  configure
components/clm/bld/namelist_files/: namelist_defaults_clm4_5.xml  namelist_definition_clm4_5.xml
components/clm/cime_config/testdefs/: testlist_clm.xml
components/clm/src/: CMakeLists.txt
components/clm/src/betr/: BetrBGCMod.F90
components/clm/src/biogeochem/: CNAllocationBetrMod.F90  CNAllocationMod.F90  CNAllocationShareMod.F90  CNBalanceCheckMod.F90  CNCStateUpdate1Mod.F90  CNCStateUpdate2Mod.F90  (+24 more)
components/homme/: CMakeLists.txt  README.cmake
components/homme/cmake/: HommeMacros.cmake
components/homme/src/: netcdf_interp_mod.F90  precon_mod.F90  prim_main.F90  test_mod.F90
components/homme/test_execs/: CMakeLists.txt
components/homme/utils/: pio
components/mpas-cice/bld/: build-namelist  build-namelist-section  mpas-cice.buildnml
components/mpas-cice/driver/: ice_comp_mct.F  mpas_cice_cpl_indices.F
components/mpas-o/bld/: build-namelist  build-namelist-group-list  build-namelist-section  mpas-o.buildnml
components/mpas-o/cime_config/: config_component.xml
components/mpas-o/driver/: mpaso_cpl_indices.F  ocn_comp_mct.F
components/mpasli/bld/: build-namelist  mpasli.buildnml
components/mpasli/cime_config/: buildlib  config_component.xml  config_compset.xml
components/mpasli/driver/: CMakeLists.txt  glc_comp_mct.F
models/csm_share/shr/: dynamic_vector_procdef.inc  dynamic_vector_typedef.inc
models/utils/pio/: CMakeLists.txt
mods_fixers/: check_energy.F90  phys_control.F90  physics_types.F90  physpkg.F90  qqflx_fixer.F90
scripts/: create_newcase
scripts/acme/: update_acme_tests.py
scripts/ccsm_utils/Case.template/: config_compsets.xml
scripts/ccsm_utils/Machines/: Makefile  config_compilers.xml  config_machines.xml  config_pes.xml  env_mach_specific.bnlcm  env_mach_specific.edison  env_mach_specific.eos  env_mach_specific.hopper  env_mach_specific.mustang  env_mach_specific.titan  env_mach_specific.titan_20160928_076bf5e  mkbatch.bnlcm  mkbatch.cab  mkbatch.edison  mkbatch.hopper  mkbatch.mira  mkbatch.mustang  mkbatch.sierra  mkbatch.titan
scripts/ccsm_utils/Testlistxml/: testlist.xml
scripts/ccsm_utils/Tools/: cesm_postrun_setup
tools/submission_script/: v03_ProcOrder.csh
(+1013 files in other folders)
